<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:background="#808080">
        <TextView
            android:text="@string/top"
            android:padding="3dp" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/table_layout_4_open"
            android:padding="3dp" />

        <TextView
            android:gravity="right"
            android:padding="3dp"
            android:text="@string/table_layout_4_open_shortcut" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/to"
            android:padding="3dp" />

        <TextView
            android:gravity="right"
            android:padding="3dp"
            android:text="@string/tt" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/fo"
            android:padding="3dp" />

        <TextView
            android:gravity="right"
            android:padding="3dp"
            android:text="@string/ft" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="match_parent"
            android:background="#000000"
            android:layout_height="1dp" />
        <TextView
            android:gravity="right"
            android:layout_width="match_parent"
            android:background="#000000"
            android:layout_height="1dp" />

    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/ffo"
            android:padding="3dp" />


    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/so"
            android:padding="3dp" />

        <TextView
            android:gravity="right"
            android:padding="3dp"
            android:text="@string/st" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="match_parent"
            android:background="#000000"
            android:layout_height="1dp" />
        <TextView
            android:gravity="right"
            android:layout_width="match_parent"
            android:background="#000000"
            android:layout_height="1dp" />

    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/sso"
            android:padding="3dp" />


    </TableRow>


</TableLayout>